--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@heroicons/react": "^2.1.3",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
     "resend": "^3.3.0"
